--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,9 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+.content-wrapper {
+  width:90%;
+}
 
 /* ----------- Base Header -Footer Styles ------- */
 header,
@@ -97,6 +99,10 @@ footer {
   flex-flow: row wrap;
 }
 
+header {
+  padding:15px 0;
+}
+
 header .content-wrapper {
   display:flex;
   justify-content: center;
@@ -104,19 +110,32 @@ header .content-wrapper {
   flex-flow: row wrap;
 }
 
+.header-divider {
+  width:100%;
+}
 
 header nav {
-    display:flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-flow: row wrap;
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+  width:60%;
+
 }
 
 header nav ul {
   display:flex;
   justify-content: space-around;
+  width:100%;
 }
 
+footer {
+  flex-direction:column;
+}
+
+footer .content-wrapper {
+  width:55%;
+}
 
 footer .social-icons {
   display:flex;
@@ -166,6 +185,10 @@ aside {
   flex-flow: row wrap;
 }
 
+.features article {
+    width:60%;
+}
+
 .fontawesome-icon {}
 .features-item-description {}
 
@@ -177,6 +200,7 @@ aside {
   align-items: center;
   flex-flow: row wrap;
 }
+
 
 
 /* ----------- About | Mobile Styles ------------- */
