--- a/css/main.css
+++ b/css/main.css
@@ -371,16 +371,33 @@ aside .content-wrapper {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
-}
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
-}
+   @media only screen and (min-width: 768px) {
+   /*Tablet styles here*/
+    .content-wrapper {
+      max-width:640px;
+      margin:100px 0;
+    }
+
+    header .content-wrapper {
+      justify-content: space-between;
+      flex-flow: nowrap;
+    }
+
+    .header-divider {
+      display:none;
+    }
+
+    header nav {}
+
+    aside .content-wrapper {
+      width:50%;
+    }
+   }
+
+   @media only screen and (min-width: 1200px) {
+   /*Desktop styles here*/
+   }
 
 /* ==========================================================================
    Print styles.
