--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ textarea {
    ========================================================================== */
 .content-wrapper {
   width:90%;
+  margin: 50px 0;
 }
 
 /* ----------- Base Header -Footer Styles ------- */
@@ -113,6 +114,8 @@ header .content-wrapper {
 
 .header-divider {
   width:100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -136,6 +139,7 @@ footer {
 
 footer .content-wrapper {
   width:55%;
+  margin: 50px 0;
 }
 
 footer p {
@@ -151,7 +155,7 @@ footer .social-icons {
 
 footer .social-icons p {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -374,42 +378,65 @@ aside .content-wrapper {
 
    @media only screen and (min-width: 768px) {
    /*Tablet styles here*/
+
+   /* General styles */
     .content-wrapper {
       max-width:640px;
       margin:100px 0;
     }
 
+    /* Header*/
+    header {
+      justify-content: space-around;
+      padding: 33px 0;
+    }
+
     header .content-wrapper {
       justify-content: space-between;
-      flex-flow: nowrap;
+      width:100%;
+    }
+
+    header nav {
+      width:20%;
+    }
+
+    header nav ul {
+      justify-content: space-between;
     }
 
     .header-divider {
       display:none;
     }
 
-    header nav {}
-
+    /* Homepage | Aside  */
     aside .content-wrapper {
+      margin: 50px 0;
       display:flex;
-      justify-content: center;
+      justify-content: space-between;
+      flex-flow: row wrap;
     }
 
     aside .content-wrapper .form-description,
     aside .content-wrapper .form {
-       width: 50%;
+       width: 40%;
        margin: 0;
      }
+
+     /* Features */
      .features article {
-       width:50%;
+       flex-basis: 50%;
        display: flex;
        justify-content: center;
+       align-items: center;
+       flex-flow: column wrap;
+
      }
 
      .features .features-item-description {
        width:50%;
      }
 
+     /* Reviews */
      .reviews article {
        display:flex;
        justify-content: space-between;
@@ -420,11 +447,20 @@ aside .content-wrapper {
        width:50%;
      }
 
+     /* Footer */
      .footer-content {
        display:flex;
        justify-content: space-between;
+       align-items: center;
      }
 
+     footer .contact {
+       margin-bottom: 0;
+     }
+
+     footer .copyright {
+       width: 100%;
+     }
 
    }
 
@@ -453,9 +489,14 @@ aside .content-wrapper {
       width:45%;
     }
 
+    .contact-section .content-wrapper h2 {
+      width: 80%;
+    }
+
     .contact-content {
       display:flex;
       justify-content: space-between;
+      align-items: flex-start;
     }
    }
 
