--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,7 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+
 .content-wrapper {
   width:90%;
   margin: 50px 0;
@@ -267,7 +268,7 @@ aside .content-wrapper {
   margin: 50px 0;
 }
 
-/* ----------- FAQ | Main Styles ------------- */
+/* ----------- FAQ | Mobile Styles ------------- */
 .faq {
   display:flex;
   justify-content: center;
@@ -422,7 +423,7 @@ aside .content-wrapper {
        margin: 0;
      }
 
-     /* Features */
+     /* Homepage | Features */
      .features article {
        flex-basis: 50%;
        display: flex;
@@ -436,7 +437,7 @@ aside .content-wrapper {
        width:50%;
      }
 
-     /* Reviews */
+     /* Homepage | Reviews */
      .reviews article {
        display:flex;
        justify-content: space-between;
@@ -464,8 +465,7 @@ aside .content-wrapper {
 
    }
 
-/* ------------------- FAQ page - tablet --*/
-
+      /*FAQ page*/
      .faq .content-wrapper {
              justify-content: space-between;
          }
@@ -478,8 +478,7 @@ aside .content-wrapper {
        width:100%;
      }
 
-/* ------------------- About page - tablet --*/
-
+    /*About page*/
     .mission-content {
       display:flex;
       justify-content: space-between;
@@ -504,6 +503,58 @@ aside .content-wrapper {
    /*Desktop styles here*/
    }
 
+
+   @media only screen and (min-width: 1200px) {
+   /*Desktop styles here*/
+
+   /* General styles */
+    .content-wrapper {
+      max-width:960px;
+    }
+
+
+    /* Homepage | hero-area */
+    .hero-area h1 {
+      width:70%;
+    }
+
+    /* Homepage | Aside */
+    aside .content-wrapper {
+      justify-content: space-evenly;
+    }
+
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {
+      width: 33%;
+    }
+
+   /*Homepage | Features */
+
+   .features h2 {
+     width:90%;
+   }
+
+   .features article {
+     flex-basis: 33%;
+   }
+
+   /* Homepage | Reviews */
+   .reviews article div {
+     width:45%;
+    }
+
+   /* About Page*/
+    .mission h2,
+    .contact-section .content-wrapper h2 {
+        width: 90%;
+    }
+
+    /* FAQ Page */
+    .faq h2 {
+        width: 100%;
+    }
+
+}
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
