--- a/css/main.css
+++ b/css/main.css
@@ -232,6 +232,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+        background-color: #527158;
 }
 
 aside .form {
@@ -581,7 +582,7 @@ input[type=button] {
       font-weight: 500;
     }
 
-    /* Homepage | Aside */
+    /* Homepage | Aside  */
     aside .content-wrapper {
       justify-content: space-evenly;
     }
@@ -591,6 +592,15 @@ input[type=button] {
       width: 33%;
     }
 
+    aside .form-description p {
+      font-size: 1.125em;
+      line-height: 1.5em;
+    }
+
+    aside h3 {
+      font-size: 1.875em;
+      font-weight: 500;
+    }
    /*Homepage | Features */
 
    .features h2 {
