--- a/css/main.css
+++ b/css/main.css
@@ -296,6 +296,7 @@ input[type=button] {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
 
 .reviews h2 {
@@ -514,6 +515,10 @@ input[type=button] {
        width:50%;
      }
 
+     .reviews h3 {
+       width:75%;
+     }
+
      /* Footer */
      .footer-content {
        display:flex;
@@ -575,6 +580,16 @@ input[type=button] {
       max-width:960px;
     }
 
+    h2 {
+      font-size: 2.25em;
+      font-weight: 500;
+    }
+
+    h3 {
+      font-size: 1.875em;
+      font-weight: 500;
+    }
+
     p {
       font-size: 1.125em;
       line-height: 1.5em;
@@ -602,20 +617,16 @@ input[type=button] {
       line-height: 1.5em;
     }
 
-    aside h3 {
-      font-size: 1.875em;
-      font-weight: 500;
-    }
    /*Homepage | Features */
+
+   .features article {
+     flex-basis: 33%;
+   }
 
    .features h2 {
      width:90%;
      font-size: 2.25em;
      font-weight: 500;
-   }
-
-   .features article {
-     flex-basis: 33%;
    }
 
    /* Homepage | Reviews */
