--- a/css/main.css
+++ b/css/main.css
@@ -236,11 +236,11 @@ footer .copyright {
 
 /* --- home | hero ---- */
 .hero-area {
+  background: url('../img/hero-img.jpg') center no-repeat #1a2c2a;
+  background-size: cover;
   display:flex;
   justify-content: center;
   flex-flow: row wrap;
-  background: url('../img/hero-img.jpg') center no-repeat #1a2c2a;
-  background-size: cover;
   min-height: 500px;
 }
 
@@ -293,12 +293,13 @@ input[type=button] {
 
 /* --- home | features ---- */
 .features {
+  background: url('../img/features-img.jpg') center no-repeat #1a2c2a;
+  background-size: cover;
   display:flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  background: url('../img/features-img.jpg') center no-repeat #1a2c2a;
-  background-size: cover;
+
 }
 
 .features h2 {
@@ -319,6 +320,7 @@ input[type=button] {
 .features article {
     width:60%;
     margin: 30px 0;
+    text-align: center;
 }
 
 /* --- home | reviews ---- */
@@ -489,6 +491,13 @@ input[type=button] {
       margin:100px 0;
     }
 
+    h2 {
+      font-size: 2.25em;
+    }
+    h3 {
+      font-size: 1.5em;
+    }
+
     /* Header*/
     header {
       justify-content: space-around;
@@ -501,7 +510,7 @@ input[type=button] {
     }
 
     header nav {
-      width:20%;
+      width:25%;
     }
 
     header nav ul {
@@ -512,9 +521,17 @@ input[type=button] {
       display:none;
     }
 
+    header figure {
+    width: 37%;
+    }
+
     /* Homepage | Hero */
     .hero-area {
       min-height: 600px;
+    }
+
+    .hero-area h1 {
+      font-size: 3em;
     }
 
     /* Homepage | Aside  */
@@ -610,7 +627,7 @@ input[type=button] {
 
     .contact-content {
       display:flex;
-      justify-content: space-between;
+      justify-content: space-evenly;
       align-items: flex-start;
     }
 
@@ -625,9 +642,6 @@ input[type=button] {
       max-width:960px;
     }
 
-    h2 {
-      font-size: 2.25em;
-    }
 
     h3 {
       font-size: 1.875em;
