--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,7 @@ footer p {
 }
 
 footer .social-icons {
-  display:flex;
+
   justify-content: space-around;
   align-items: center;
   margin: 40px 0;
@@ -223,7 +223,7 @@ footer .social-icons {
 
 footer .social-icons p {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
@@ -494,9 +494,10 @@ input[type=button] {
     h2 {
       font-size: 2.25em;
     }
-    h3 {
+    h3,h4 {
       font-size: 1.5em;
     }
+
 
     /* Header*/
     header {
@@ -627,7 +628,7 @@ input[type=button] {
 
     .contact-content {
       display:flex;
-      justify-content: space-evenly;
+      justify-content: space-between;
       align-items: flex-start;
     }
 
