--- a/css/main.css
+++ b/css/main.css
@@ -355,7 +355,21 @@ input[type=button] {
 
 
 /* --- about | map ---- */
-.map {}
+.map figure {
+    width: 100%;
+    height: 0;
+    padding-bottom: 125%;
+    overflow: hidden;
+    position: relative;
+}
+
+.map iframe {
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+}
 
 /* --- about | contact ---- */
 .contact-section {
