Style map for tablet and desktop

--- a/css/main.css
+++ b/css/main.css
@@ -636,6 +636,10 @@ input[type=button] {
       width:45%;
     }
 
+    .map figure {
+      padding-bottom:37%;
+    }
+
     .contact-section .content-wrapper h2 {
       width: 80%;
     }
@@ -714,6 +718,10 @@ input[type=button] {
     .mission h2,
     .contact-section .content-wrapper h2 {
         width: 90%;
+    }
+
+    .map figure {
+      padding-bottom:37%;
     }
 
     /* FAQ Page */
